--- a/admin/thongke.html
+++ b/admin/thongke.html
@@ -106,7 +106,7 @@
     <script src="assets/component/topbar.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="assets/js/product.js"></script>
+    <!-- <script src="assets/js/product.js"></script> -->
     <script src="assets/javascript/thongke.js"></script>
     
     
