--- a/checkout.html
+++ b/checkout.html
@@ -89,8 +89,8 @@
                             <div class="row">
                                 <div class="col-lg-12">
                                     <div class="checkout__input">
-                                        <input id="idKH" type="text" placeholder="idKH">
-                                        <input id="idKM" type="text" placeholder="idKM">
+                                        <input id="idKH" type="hidden" placeholder="idKH">
+                                        <input id="idKM" type="hidden" placeholder="idKM">
                                     </div>
                                 </div>
                             </div>
