--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Apple Watch Ultra GPS</h6>
-                                        <span>23.990.000 VNĐ</span>
+                                        <span>23.990.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=238&idDM=48" class="latest-product__item">
@@ -178,7 +178,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Túi Chanel Printed Fabric Metal 'Multicolor'</h6>
-                                        <span>131.000.000 VNĐ</span>
+                                        <span>131.000.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=222&idDM=45" class="latest-product__item">
@@ -187,7 +187,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Xvessel G.O.P.HIGHS Khaki</h6>
-                                        <span>8.900.000 VNĐ</span>
+                                        <span>8.900.000 ₫</span>
                                     </div>
                                 </a>
                             </div>
@@ -198,7 +198,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Laptop Dell Vostro 5410</h6>
-                                        <span>21.500.000 VNĐ</span>
+                                        <span>21.500.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=117&idDM=24" class="latest-product__item">
@@ -207,7 +207,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Giá Treo Màn hình máy tính 1 tay NB F80</h6>
-                                        <span>295.000 VNĐ</span>
+                                        <span>295.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=110&idDM=23" class="latest-product__item">
@@ -216,7 +216,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Laptop gaming ASUS TUF A15</h6>
-                                        <span>26.900.000 VNĐ</span>
+                                        <span>26.900.000 ₫</span>
                                     </div>
                                 </a>
                             </div>
@@ -234,7 +234,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Iphone 14 Promax</h6>
-                                        <span>33.990.000 VNĐ</span>
+                                        <span>33.990.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=107&idDM=22" class="latest-product__item">
@@ -243,7 +243,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Màn hình Lenovo Legion Y25-30</h6>
-                                        <span>7.390.000 VNĐ</span>
+                                        <span>7.390.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=95&idDM=20" class="latest-product__item">
@@ -252,7 +252,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Ổ Cắm Điện Thông Minh Đa Năng</h6>
-                                        <span>79.000 VNĐ</span>
+                                        <span>79.000 ₫</span>
                                     </div>
                                 </a>
                             </div>
@@ -263,7 +263,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Máy Ảnh CANON EOS R5</h6>
-                                        <span>118.00.000 VNĐ</span>
+                                        <span>118.00.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=175&idDM=36" class="latest-product__item">
@@ -272,7 +272,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Đồng Hồ ORIENT RE-AV0B03B00B</h6>
-                                        <span>25.700.000 VNĐ</span>
+                                        <span>25.700.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=236&idDM=48" class="latest-product__item">
@@ -281,7 +281,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Túi Dolce & Gabbana Medium Printed Elaphe Sicily Bag 'Pink'</h6>
-                                        <span>115.900.000 VNĐ</span>
+                                        <span>115.900.000 ₫</span>
                                     </div>
                                 </a>
                             </div>
@@ -299,7 +299,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Sữa rửa mặt Cerave Foaming Facial Cleanser</h6>
-                                        <span>400.000 VNĐ</span>
+                                        <span>400.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=139&idDM=28" class="latest-product__item">
@@ -308,7 +308,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Sữa rửa mặt nghệ Hưng Yên Cocoon</h6>
-                                        <span>295.000 VNĐ</span>
+                                        <span>295.000 ₫</span>
                                     </div>
                                 </a>
                                 <a href="shop-details.html?id=125&idDM=26" class="latest-product__item">
@@ -317,7 +317,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Son lì Chioture Hazy Mirror Matte Lip</h6>
-                                        <span>280.000 VNĐ</span>
+                                        <span>280.000 ₫</span>
                                     </div>
                                 </a>
                             </div>
@@ -346,7 +346,7 @@
                                     </div>
                                     <div class="latest-product__item__text">
                                         <h6>Ví da mini đựng thẻ, tiền xu VD2060</h6>
-                                        <span>900.000 VNĐ</span>
+                                        <span>900.000 ₫</span>
                                     </div>
                                 </a>
                             </div>
