--- a/shop-details.html
+++ b/shop-details.html
@@ -103,7 +103,7 @@
                             <i class="fa fa-star-half-o"></i>
                             <span>(18 đánh giá)</span>
                         </div>
-                        <div class="product__details__price">31.990.000 VNĐ</div>
+                        <div class="product__details__price">31.990.000 ₫</div>
                         <p>Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vestibulum ac diam sit amet quam
                             vehicula elementum sed sit amet dui. Sed porttitor lectus nibh. Vestibulum ac diam sit amet
                             quam vehicula elementum sed sit amet dui. Proin eget tortor risus.</p>
