--- a/shop-grid.html
+++ b/shop-grid.html
@@ -100,7 +100,7 @@
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Apple Watch Ultra GPS</h6>
-                                                <span>23.990.000 VNĐ</span>
+                                                <span>23.990.000 ₫</span>
                                             </div>
                                         </a>
                                         <a href="shop-details.html?id=238&idDM=48" class="latest-product__item">
@@ -109,7 +109,7 @@
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Túi Chanel Printed Fabric Metal 'Multicolor'</h6>
-                                                <span>131.000.000 VNĐ</span>
+                                                <span>131.000.000 ₫</span>
                                             </div>
                                         </a>
                                         <a href="shop-details.html?id=222&idDM=45" class="latest-product__item">
@@ -118,7 +118,7 @@
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Xvessel G.O.P.HIGHS Khaki</h6>
-                                                <span>8.900.000 VNĐ</span>
+                                                <span>8.900.000 ₫</span>
                                             </div>
                                         </a>
                                     </div>
@@ -129,7 +129,7 @@
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Laptop Dell Vostro 5410</h6>
-                                                <span>21.500.000 VNĐ</span>
+                                                <span>21.500.000 ₫</span>
                                             </div>
                                         </a>
                                         <a href="shop-details.html?id=117&idDM=24" class="latest-product__item">
@@ -138,7 +138,7 @@
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Giá Treo Màn hình máy tính 1 tay NB F80</h6>
-                                                <span>295.000 VNĐ</span>
+                                                <span>295.000 ₫</span>
                                             </div>
                                         </a>
                                         <a href="shop-details.html?id=110&idDM=23" class="latest-product__item">
@@ -147,7 +147,7 @@
                                             </div>
                                             <div class="latest-product__item__text">
                                                 <h6>Laptop gaming ASUS TUF A15</h6>
-                                                <span>26.900.000 VNĐ</span>
+                                                <span>26.900.000 ₫</span>
                                             </div>
                                         </a>
                                     </div>
