--- a/admin/add-category.html
+++ b/admin/add-category.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/plugins/morris/morris.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./assets/css/toastr.min.css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="assets/css/newstyle.css" rel="stylesheet" type="text/css">
 
@@ -135,12 +136,12 @@
     <script src="assets/pages/dashboard.js"></script>
 
     <!-- App js -->
-    <script src="../js/toastr.min.js"></script>
     <script src="assets/component/left-side.js"></script>
     <script src="assets/component/topbar.js"></script>
     <script src="assets/javascript/category.js"></script>
     <script src="assets/js/app.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="../js/toastr.min.js"></script>
     <script src="assets/javascript/themdm.js"></script>
     
 
