--- a/admin/add-dmtong.html
+++ b/admin/add-dmtong.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="assets/plugins/morris/morris.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./assets/css/toastr.min.css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="assets/css/newstyle.css" rel="stylesheet" type="text/css">
 
@@ -111,6 +112,7 @@
     <script src="assets/js/waves.js"></script>
     <script src="assets/js/jquery.nicescroll.js"></script>
     <script src="assets/js/jquery.scrollTo.min.js"></script>
+    <script src="../js/toastr.min.js"></script>
 
     <!-- skycons -->
     <script src="assets/plugins/skycons/skycons.min.js"></script>
