--- a/admin/add-users.html
+++ b/admin/add-users.html
@@ -14,6 +14,8 @@
     <!--Morris Chart CSS -->
     <link rel="stylesheet" href="assets/plugins/morris/morris.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./assets/css/toastr.min.css">
+    
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
@@ -116,10 +118,6 @@
             </div>
             <!-- content -->
 
-            <footer class="footer">
-                © 2022 <b>Phatt</b> <span class="d-none d-sm-inline-block"> - With <i class="mdi mdi-heart text-danger"></i> by Phat - Javascript Advanced.</span>
-            </footer>
-
         </div>
         <!-- End Right content here -->
 
@@ -138,7 +136,7 @@
     <script src="assets/js/waves.js"></script>
     <script src="assets/js/jquery.nicescroll.js"></script>
     <script src="assets/js/jquery.scrollTo.min.js"></script>
-
+    <script src="../js/toastr.min.js"></script>
     <!-- skycons -->
     <script src="assets/plugins/skycons/skycons.min.js"></script>
 
