--- a/admin/login.html
+++ b/admin/login.html
@@ -11,12 +11,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
     <link rel="shortcut icon" href="../img/favicon/Silkroad.png">
-    <style>
-        .error-msg {
-            color: red;
-        }
-    </style>
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./assets/css/toastr.min.css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
@@ -84,7 +80,7 @@
                                                     <a href="./register.html" class="text-muted"><i class="mdi mdi-account-circle"></i>Đăng ký tài khoản</a>
                                                 </div>
                                             </div>
-                                            </d>
+                                        </d>
                                         </div>
 
                                     </div>
@@ -109,7 +105,8 @@
         <script src="assets/js/waves.js"></script>
         <script src="assets/js/jquery.nicescroll.js"></script>
         <script src="assets/js/jquery.scrollTo.min.js"></script>
-
+        <script src="../js/toastr.min.js"></script>
+        
         <!-- App js -->
     <script src="../js/toastr.min.js"></script>
         <script src="assets/js/app.js"></script>
