--- a/admin/member.html
+++ b/admin/member.html
@@ -9,12 +9,13 @@
     <meta content="Admin Dashboard" name="description" />
     <meta content="ThemeDesign" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-
+    
     <link rel="shortcut icon" href="../img/favicon/Silkroad.png">
     <!--Morris Chart CSS -->
     <link rel="stylesheet" href="assets/plugins/morris/morris.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./assets/css/toastr.min.css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="assets/css/newstyle.css" rel="stylesheet" type="text/css">
 
@@ -65,10 +66,10 @@
                                                 <thead>
                                                     <tr>
                                                         <th>#</th>
-                                                        <th>Tên người dùng</th>
+                                                        <th style="width: 100px;font-size: 12px;">Tên người dùng</th>
                                                         <th>Mật khẩu</th>
                                                         <th style="width: 100px !important;">Hình ảnh</th>
-                                                        <th>Địa chỉ</th>
+                                                        <th style="width: 150px;">Địa chỉ</th>
                                                         <th>Email</th>
                                                         <th>SĐT</th>
                                                         <th>Vai trò</th>
@@ -114,7 +115,7 @@
     <script src="assets/js/waves.js"></script>
     <script src="assets/js/jquery.nicescroll.js"></script>
     <script src="assets/js/jquery.scrollTo.min.js"></script>
-
+    <script src="../js/toastr.min.js"></script>
     <!-- skycons -->
     <script src="assets/plugins/skycons/skycons.min.js"></script>
 
