--- a/admin/add-thongBao.html
+++ b/admin/add-thongBao.html
@@ -14,6 +14,8 @@
     <!--Morris Chart CSS -->
     <link rel="stylesheet" href="assets/plugins/morris/morris.css">
     <link href="assets/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="./assets/css/toastr.min.css">
+    
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
 
@@ -129,7 +131,7 @@
     <script src="assets/js/waves.js"></script>
     <script src="assets/js/jquery.nicescroll.js"></script>
     <script src="assets/js/jquery.scrollTo.min.js"></script>
-
+    <script src="../js/toastr.min.js"></script>
     <!-- skycons -->
     <script src="assets/plugins/skycons/skycons.min.js"></script>
 
