--- a/login.html
+++ b/login.html
@@ -94,7 +94,7 @@
 								<input class="form-check-input" type="checkbox" value="" id="form1Example3" checked />
 								<label class="form-check-label" for="form1Example3"> Lưu tài khoản </label>
 							</div>
-							<a href="#!">Quên mật khẩu ?</a>
+							<!-- <a href="#!">Quên mật khẩu ?</a> -->
 						</div>
 						<div class="form-group">
 							<p id="erros"></p>
@@ -108,9 +108,9 @@
 						</p>
 						</div>
 
-						<a class="btn btn-primary btn-lg btn-block" 
+						<!-- <a class="btn btn-primary btn-lg btn-block" 
 						style="background-color: #ee5a55" href="#!" role="button">
-							<i class="fa fa-google me-2"></i> Đăng nhập với Google</a>
+							<i class="fa fa-google me-2"></i> Đăng nhập với Google</a> -->
 
 					</form>
 				</div>
