--- a/resigter.html
+++ b/resigter.html
@@ -117,9 +117,9 @@
 						</div>
 						<!-- Submit button -->
 						<button type="submit" id="dangky" class="btn btn-primary btn-lg btn-block">Đăng ký</button>
-						<a class="btn btn-primary btn-lg btn-block" 
+						<!-- <a class="btn btn-primary btn-lg btn-block" 
 						style="background-color: #ee5a55" href="#!" role="button">
-							<i class="fa fa-google me-2"></i> Đăng ký với Google</a>
+							<i class="fa fa-google me-2"></i> Đăng ký với Google</a> -->
 					</form>
 				</div>
 			</div>
