--- a/admin/index.html
+++ b/admin/index.html
@@ -19,6 +19,7 @@
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
     <link href="assets/css/table.css" rel="stylesheet" type="text/css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.0.1/dist/chart.umd.min.js"></script>
+    <link rel="stylesheet" href="assets/css/newstyle.css">
 
 </head>
 
@@ -31,7 +32,7 @@
             <div class="spinner"></div>
         </div>
     </div>
-    
+
     <!-- Begin page -->
     <div id="wrapper">
 
