--- a/userdetail.html
+++ b/userdetail.html
@@ -51,7 +51,7 @@
               <div class="col-lg-12 text-center">
                   <div class="breadcrumb__text">
                       <h2>Silk Road</h2>
-                      <div class="breadcrumb__option" style="">
+                      <div class="breadcrumb__option">
                           <a href="./index.html">Trang chủ</a>
                           <span>Tài khoản</span>
                       </div>
@@ -63,7 +63,11 @@
 
   <section style="margin-top: 50px;">
     <div class="container py-5" id="khachHang">
+        <div style="text-align: center;">
 
+          <h3>Bạn cần phải đăng nhập!</h3>
+          <a class="btn btn-primary" href="index.html">Về trang chủ</a>
+      </div>
     </div>
   </section>
 
@@ -131,7 +135,7 @@ const action = document.getElementById('change');
   <!-- JS -->
   <script src="./js/footAndHead.js"></script>
   <Script src="js/user/nguoidung.js"></Script>
-
+  <script src="js/user/userdetail.js"></script>
 </body>
 
 </html>
