--- a/admin/add-users.html
+++ b/admin/add-users.html
@@ -18,6 +18,7 @@
     
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/newstyle.css">
 
 </head>
 
