--- a/admin/thongBao.html
+++ b/admin/thongBao.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="./assets/css/toastr.min.css">
     <link href="assets/css/icons.css" rel="stylesheet" type="text/css">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="assets/css/newstyle.css">
 
 </head>
 
