--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
 
 <body id="body">
     <!-- Page Preloder -->
-    <div id="preloder">
+    <!-- <div id="preloder">
         <div class="loader"></div>
-    </div>
-    <div class="all-pop">
+    </div> -->
+    <!-- <div class="all-pop">
         <section class="popup">
             <div class="contentBox">
                 <div class="close"></div>
@@ -70,12 +70,12 @@
             })
             
         </script>
-    </div>
+    </div> -->
 
     <!-- Humberger Begin -->
     <div class="humberger__menu__overlay"></div>
     <div class="humberger__menu__wrapper" id="humberger">
-
+ 
     </div>
     <!-- Humberger End -->
 
@@ -195,7 +195,7 @@
     <!-- Featured Section End -->
 
     <!-- Latest Product Section Begin -->
-    <section class="latest-product spad">
+    <!-- <section class="latest-product spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6">
@@ -395,7 +395,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
     <!-- Latest Product Section End -->
 
     <!-- Blog Section Begin -->
@@ -417,12 +417,12 @@
     <script src="./js/mixitup.min.js"></script>
     <script src="./js/owl.carousel.min.js"></script>
     <script src="./js/toastr.min.js"></script>
-    <script src="js/main.js"></script>
     <!-- JS -->
+    <script src="./js/footAndHead.js"></script>
+    <script src="js/main.js"></script>
     <script src="./js/sanpham/timkiemsanpham.js"></script>
     <script src="./js/sanpham/hiensanpham.js" defer type="module"></script>
     <script src="./js/danhmuc/hiendanhmuctong.js" defer type="module"></script>
-    <script src="./js/footAndHead.js"></script>
     <Script src="./js/giohang/themvaogiohang.js"></Script>
 </body>
 
