--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <!-- Featured Section End -->
 
     <!-- Latest Product Section Begin -->
-    <!-- <section class="latest-product spad">
+    <section class="latest-product spad">
         <div class="container">
             <div class="row">
                 <div class="col-lg-4 col-md-6">
@@ -395,7 +395,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
     <!-- Latest Product Section End -->
 
     <!-- Blog Section Begin -->
