--- a/passchange.html
+++ b/passchange.html
@@ -134,8 +134,9 @@ const action = document.getElementById('change');
 
   <!-- JS -->
   <script src="./js/footAndHead.js"></script>
-  <Script src="js/user/nguoidung.js"></Script>
-  <script src="js/user/userdetail.js"></script>
+  <!-- <Script src="js/user/nguoidung.js"></Script>
+  <script src="js/user/userdetail.js"></script> -->
+  <script src="./js/user/passchange.js"></script>
 </body>
 
 </html>
