--- a/userchange.html
+++ b/userchange.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="css/toastr.min.css">
     <link href="./img/favicon/Silkroad.png" rel="icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
@@ -129,6 +130,7 @@ const action = document.getElementById('change');
   <script src="js/jquery.slicknav.js"></script>
   <script src="js/mixitup.min.js"></script>
   <script src="js/owl.carousel.min.js"></script>
+  <script src="./js/toastr.min.js"></script>
   
   <!-- JS -->
   <script src="./js/footAndHead.js"></script>
@@ -136,7 +138,6 @@ const action = document.getElementById('change');
   <!-- <script src="js/user/userdetail.js"></script> -->
   <script src="./js/user/userchange.js"></script>
   <script src="js/main.js"></script>
-  <script src="./js/toastr.min.js"></script>
 </body>
 
 </html>
