--- a/blog-details.html
+++ b/blog-details.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="css/toastr.min.css" type="text/css">
     <link href="./img/favicon/Silkroad.png" rel="icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
@@ -264,10 +265,11 @@
     <script src="js/jquery.slicknav.js"></script>
     <script src="js/mixitup.min.js"></script>
     <script src="js/owl.carousel.min.js"></script>
-    <script src="js/main.js"></script>
-
+    <script src="js/toastr.min.js"></script>
+    
     <!-- JS -->
     <script src="js/footAndHead.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
