--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
     <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
     <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="css/toastr.min.css" type="text/css">
     <link href="./img/favicon/Silkroad.png" rel="icon">
     <link rel="stylesheet" href="css/style.css" type="text/css">
     <link rel="stylesheet" href="css/newStyle.css" type="text/css">
