--- a/passchange.html
+++ b/passchange.html
@@ -53,7 +53,7 @@
                       <h2>Silk Road</h2>
                       <div class="breadcrumb__option">
                           <a href="./index.html">Trang chủ</a>
-                          <span>Tài khoản</span>
+                          <span>Tài khoản</span>-<span>Đổi mật khẩu</span>
                       </div>
                   </div>
               </div>
