--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
 <body id="body">
     <!-- Page Preloder -->
-    <!-- <div id="preloder">
+    <div id="preloder">
         <div class="loader"></div>
-    </div> -->
+    </div>
     <!-- <div class="all-pop">
         <section class="popup">
             <div class="contentBox">
